--- a/CSS_CLASS-2/transform/index.html
+++ b/CSS_CLASS-2/transform/index.html
@@ -9,16 +9,16 @@
 <body>
 
     <div class="box">
-        ABCD
+     <h1>ABCD</h1>
     </div>
 
-    <div id="divi">
+    <!-- <div id="divi">
         <h4 id="left">hello</h4>
         <h4 id="right">hello</h4>
         <h4 id="center">hello</h4>
         <h4 id="bl">hello</h4>
         <h4 id="br">hello</h4> 
-    </div>
+    </div> -->
     
 </body>
 </html>
